tests/diagnostics/statements/control_flow/break_outside_loop/expect.txt
# exit: 1
input/main.lang0:2:5: error: break can only be used inside a loop
      break
      ^
